Fixed issue where comments were not visible on the SinglePost page. Removed comments from the profile page.

--- a/frontend/src/components/Post/post.css
+++ b/frontend/src/components/Post/post.css
@@ -40,13 +40,19 @@
 	align-items: center;
 	margin-top: 10px;
 }
+
 .postUserName {
 	font-size: 15px;
 	font-weight: 500;
 	margin: 0 10px;
 }
+
 .postTime {
 	font-size: 10px;
+}
+
+.postTime a {
+	color: #000000;
 }
 
 .postCenter {
@@ -59,7 +65,7 @@
 
 .postedImage {
 	max-width: 100%;
-	max-height: 86vh;
+	max-height: 80vh;
 	object-fit: contain;
 	border-radius: 8px;
 }
